--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
+    "swiper": "^12.0.3",
     "vue": "^3.2.13",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.0.3",
